--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="cart">购物车</string>
     <string name="news_details">新闻详情</string>
     <string name="title_activity_news_details">NewsDetailsActivity</string>
-
+    <string name="item_detail_title">道具明细</string>
+    
 </resources>
